--- a/WcfWpf.Data/WcfWpf.Data.csproj
+++ b/WcfWpf.Data/WcfWpf.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EF9FF1BF-4535-42DB-AA34-31214AE4A0C4}</ProjectGuid>
+    <ProjectGuid>{D3B6EBC1-A83B-4B38-8F6C-3838300C02C8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WcfWpf.Contracts</RootNamespace>
-    <AssemblyName>WcfWpf.Contracts</AssemblyName>
+    <RootNamespace>WcfWpf.Data</RootNamespace>
+    <AssemblyName>WcfWpf.Data</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,8 +32,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,8 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IWcfWpfService.cs" />
+    <Compile Include="IRepository.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WcfWpf.Contracts\WcfWpf.Contracts.csproj">
+      <Project>{EF9FF1BF-4535-42DB-AA34-31214AE4A0C4}</Project>
+      <Name>WcfWpf.Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
